# ArrendaToolsActualizaRenta

./: CHANGELOG.md  README.md  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yaml
.github/workflows/: main.yml  test.yml
arrendatools/actualiza_renta/: actualizacion_renta.py  ipc.py
src/arrendatools/: __init__.py
src/arrendatools/rent_update/: __init__.py  base.py  date_utils.py  factory.py  ine_client.py
src/arrendatools/rent_update/strategies/: __init__.py  fixed_amount.py  ipc.py  ipc_data.py  ipc_then_percentage.py  irav.py  min_ipc_or_percentage.py  percentage.py
tests/: test_date_utils.py  test_factory.py  test_fixed_amount.py  test_ine_client.py  test_ipc.py  test_ipc_then_percentage.py  test_irav.py  test_min_ipc_or_percentage.py  test_percentage.py  test_rent_update_method.py
