[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arrendatools.actualiza_renta"
version = "1.1.1"
authors = [
    {name = "Jordi Morell", email = "hokus@hotmail.com"},
]
description = "Módulo de Python que realiza la actualización de rentas de alquiler por anualidades completas con el IPC (LAU) descrita en la web del INE de España."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests==2.32.5",
]

[project.entry-points."arrendatools.rent_update"]
percentage = "arrendatools.rent_update.strategies.percentage:PercentageUpdate"
fixed_amount = "arrendatools.rent_update.strategies.fixed_amount:FixedAmountUpdate"
ipc = "arrendatools.rent_update.strategies.ipc:IpcUpdate"
irav = "arrendatools.rent_update.strategies.irav:IravUpdate"
min_ipc_or_percentage = "arrendatools.rent_update.strategies.min_ipc_or_percentage:MinIpcOrPercentageUpdate"
ipc_then_percentage = "arrendatools.rent_update.strategies.ipc_then_percentage:IpcThenPercentageUpdate"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.semantic_release]
logging_use_named_masks = true
tag_format = "v{version}"
commit_parser = "angular"
commit_author = "semantic-release <semantic-release>"
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
build_command = """
    python -m pip install build~=0.10.0
    python -m build .
"""
major_on_zero = true
assets = []
version_variables = ["src/arrendatools/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["arrendatools"]

[tool.coverage.report]
show_missing = true